--- a/项目实训/rainbow1/app/src/main/res/layout/activity_agreement.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_agreement.xml
@@ -21,6 +21,7 @@
             android:textSize="26sp" />
 
         <ImageView
+            android:id="@+id/iv_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
