--- a/项目实训/rainbow1/app/src/main/res/layout/activity_change.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_change.xml
@@ -26,78 +26,70 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="安全验证"
-            android:textSize="15dp"
-            android:textColor="#E14B4B"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=">找回登陆密码"
-            android:textSize="15dp" />
-    </LinearLayout>
-    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="60dp"
-        android:background="#F2F2F2">
+        android:layout_height="match_parent"
+        android:layout_margin="30sp"
+        android:orientation="vertical">
 
-        <Spinner
-            android:layout_gravity="center"
-            android:id="@+id/spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:entries="@array/code" />
-
-        <EditText
-            android:layout_gravity="center"
-            android:id="@+id/et_phone_num"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="请输入手机号"
-            android:textSize="18dp"
-            android:background="@null"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="15dp"
-        android:background="#F2F2F2">
-
-        <EditText
-            android:id="@+id/et_code"
-            android:layout_width="150dp"
-            android:layout_height="45dp"
-            android:hint="请输入验证码"
-            android:textSize="18dp"
-            android:background="@null"/>
-
-        <Button
-            android:id="@+id/btn_get"
+        <RelativeLayout
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:text="获取验证码"
-            android:textSize="15dp" />
+            android:layout_height="50dp"
+            android:background="#f2f2f2">
+            <EditText
+                android:layout_centerInParent="true"
+                android:inputType="textPassword"
+                android:id="@+id/et_pwd"
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:hint="请输入旧密码"
+                android:textSize="20sp"/>
+            <ImageView
+                android:id="@+id/imageView"
+                android:src="@drawable/close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_margin="10dp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#f2f2f2">
+            <EditText
+                android:layout_centerInParent="true"
+                android:inputType="textPassword"
+                android:id="@+id/et_pwd1"
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:hint="请输入新密码"
+                android:textSize="20sp"/>
+            <ImageView
+                android:id="@+id/imageView1"
+                android:src="@drawable/close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_margin="10dp" />
+
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/iv_forward"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="50dp"
+            android:src="@drawable/land" />
 
     </LinearLayout>
-    <ImageView
-        android:id="@+id/iv_forward"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/land"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="175dp"/>
+
+
 </LinearLayout>
