--- a/项目实训/rainbow1/app/src/main/res/layout/activity_login.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:hint="请输入手机号\用户名"
+                android:hint="请输入手机号"
                 android:textSize="20sp"/>
 
         </LinearLayout>
