--- a/项目实训/rainbow1/app/src/main/res/layout/activity_place_details.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_place_details.xml
@@ -96,9 +96,11 @@
             android:orientation="vertical">
 
             <ImageView
+                android:onClick="onClicked"
+                android:id="@+id/img_movie"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:src="@drawable/movie" />
+                android:src="@drawable/movied" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -115,6 +117,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:onClick="onClicked"
                 android:id="@+id/img_map"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -155,12 +158,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textSize="20dp" />
-
-    <ListView
-        android:id="@+id/lv_item_movie1"
+    <FrameLayout
+        android:id="@+id/tab_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@null">
+        android:layout_above="@id/tab_widget" />
 
-    </ListView>
 </LinearLayout>
