--- a/项目实训/rainbow1/app/src/main/res/layout/activity_account_and_safety.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_account_and_safety.xml
@@ -2,8 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="#fbfbfb">
+    android:background="#fbfbfb"
+    android:fitsSystemWindows="true"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
     <RelativeLayout
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
