--- a/项目实训/rainbow1/app/src/main/res/layout/activity_dynamic_deatails.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_dynamic_deatails.xml
@@ -2,7 +2,10 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:fitsSystemWindows="true"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
     <ImageView
         android:src="@drawable/tower"
         android:scaleType="fitXY"
