--- a/项目实训/rainbow1/app/src/main/res/layout/activity_feedback.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_feedback.xml
@@ -2,8 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:orientation="vertical"
-    android:background="#fff">
+    android:background="#fff"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
     <RelativeLayout
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
