--- a/项目实训/rainbow1/app/src/main/res/layout/activity_login_register.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_login_register.xml
@@ -3,7 +3,10 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
     <ImageView
         android:layout_marginLeft="30dp"
         android:layout_marginTop="50dp"
