--- a/项目实训/rainbow1/app/src/main/res/layout/activity_personal_center.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_personal_center.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    >
+    android:background="@drawable/badaling"
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_marginLeft="20dp"
