--- a/项目实训/rainbow1/app/src/main/res/layout/activity_settings.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_settings.xml
@@ -3,7 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#fbfbfb">
+    android:background="#fbfbfb"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
     <RelativeLayout
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
