--- a/项目实训/rainbow1/app/src/main/res/layout/fragment_collection.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/fragment_collection.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CollectionFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    android:orientation="vertical">
+    <ListView
+        android:divider="@null"
+        android:id="@+id/lv_item_movie"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="这是收藏列表" />
+        android:layout_height="match_parent"></ListView>
 
-</FrameLayout>
+</LinearLayout>
