--- a/项目实训/rainbow1/app/src/main/res/layout/activity_city.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_city.xml
@@ -2,12 +2,9 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clipToPadding="false"
     android:overScrollMode="never"
-    android:scrollbars="none"
-    android:fitsSystemWindows="true"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+    android:scrollbars="none">
 
     <LinearLayout
         android:layout_width="match_parent"
