--- a/项目实训/rainbow1/app/src/main/res/layout/activity_movie_details.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_movie_details.xml
@@ -5,10 +5,7 @@
     android:id="@+id/smart_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:srlEnableFooterFollowWhenLoadFinished="true"
-    app:srlEnableScrollContentWhenLoaded="true"
-    android:fitsSystemWindows="true"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+    app:srlEnableFooterFollowWhenLoadFinished="true">
 
     <com.scwang.smartrefresh.layout.header.ClassicsHeader
         android:layout_width="match_parent"
