--- a/项目实训/rainbow1/app/src/main/res/layout/activity_movie_theme.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_movie_theme.xml
@@ -6,10 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MovieThemeActivity"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fitsSystemWindows="true"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+    tools:context=".MovieThemeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
