--- a/项目实训/rainbow1/app/src/main/res/layout/activity_num_login.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_num_login.xml
@@ -2,10 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fitsSystemWindows="true"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
