--- a/项目实训/rainbow1/app/src/main/res/layout/activity_search.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_search.xml
@@ -5,10 +5,7 @@
     android:orientation="vertical"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
-    android:paddingTop="10dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fitsSystemWindows="true"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+    android:paddingTop="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
