--- a/项目实训/rainbow1/app/src/main/res/layout/activity_search_more.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_search_more.xml
@@ -4,10 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fitsSystemWindows="true"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+    android:paddingRight="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
