--- a/项目实训/rainbow1/app/src/main/res/layout/fragment_collection.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/fragment_collection.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <ListView
-        android:divider="@null"
-        android:id="@+id/lv_item_movie"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+    android:layout_height="match_parent">
 
-</LinearLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/lv_item_movie"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="@null"></ListView>
+
+        <ListView
+            android:id="@+id/lv_item_place"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:divider="@null"></ListView>
+
+
+    </LinearLayout>
+</ScrollView>
