--- a/项目实训/rainbow1/app/src/main/res/layout/fragment_notes.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/fragment_notes.xml
@@ -6,9 +6,10 @@
     tools:context=".NotesFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/lv_post"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="这是笔记列表" />
-
+        android:layout_height="wrap_content">
+    </ListView>
 </FrameLayout>
