--- a/项目实训/rainbow1/app/src/main/res/layout/activity_route_detail.xml
+++ b/项目实训/rainbow1/app/src/main/res/layout/activity_route_detail.xml
@@ -10,7 +10,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/ll">
 
         <LinearLayout
             android:id="@+id/map"
@@ -20,6 +21,7 @@
             android:layout_marginTop="30dp">
 
             <TextView
+                android:id="@+id/tv_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="03"
@@ -46,22 +48,25 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="10dp"
-                        android:text="片场" />
+                        android:text="与影随行" />
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/tv_place_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="北茭村渔港"
                     android:textSize="20dp" />
 
                 <TextView
+                    android:id="@+id/tv_place_enName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Beijiao Harbor"
                     android:textSize="12dp" />
 
                 <TextView
+                    android:id="@+id/tv_address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="35dp"
@@ -82,7 +87,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/movie1"
+                    android:id="@+id/iv_movie"
                     android:layout_width="70dp"
                     android:layout_height="100dp"
                     android:layout_marginLeft="15dp"
@@ -90,6 +95,7 @@
                     android:src="@drawable/route2" />
 
                 <TextView
+                    android:id="@+id/tv_movie_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="20dp"
@@ -104,6 +110,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/iv_movie_place"
                     android:layout_width="wrap_content"
                     android:layout_height="150dp"
                     android:layout_marginLeft="15dp"
@@ -111,6 +118,7 @@
                     android:src="@drawable/route1" />
 
                 <TextView
+                    android:id="@+id/tv_movie_instruction"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="15dp"
@@ -150,6 +158,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/iv_place"
                 android:layout_width="270dp"
                 android:layout_height="150dp"
                 android:layout_marginLeft="15dp"
@@ -169,6 +178,7 @@
                     android:textSize="35dp" />
 
                 <TextView
+                    android:id="@+id/tv_place_name1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="95dp"
@@ -182,6 +192,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/tv_des"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="75dp"
